<resources>
    <string name="app_name">GotRex</string>
    <string name="title_home">Home</string>
    <string name="title_eat">Eat</string>
    <string name="title_bath">Take a bath</string>
    <string name="title_status">Status</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_activity_named">Name</string>

    <!-- Strings related to login -->
    <string name="hintToPutName">Name your pet!</string>
    <string name="buttonPutName">OK</string>

    <!-- For new Launcher -->
    <string name="egg">new egg</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- For object in fragment-->
    <string name="Baby">Baby</string>
    <string name="Food1">chicken</string>
    <string name="Food2">burger</string>
    <string name="Food3">cereal</string>
    <string name="Food4">cake</string>
    <string name="Food5">milk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
