<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_eat"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_eat" />

    <item
        android:id="@+id/navigation_bath"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_bath" />

    <item
        android:id="@+id/navigation_status"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_status" />

    <item
        android:id="@+id/navigation_sleep"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sleep" />

</menu>
